--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -56,7 +56,7 @@
       <div class="card-body p-0">
         <table class="table table-striped table-bordered mb-0">
           <tbody>
-            <tr><th>Secteur</th><td>{{ object.secteur_name }}</td></tr>
+            <tr><th>Secteur</th><td>{{ object.secteurs }}</td></tr>
             <tr><th>Lieu-dit</th><td>{{ object.lieu_dit }}</td></tr>
             <tr><th>Cadastre</th><td>{{ object.cadastre }}</td></tr>
             <tr><th>Coordonnée X</th><td>{{ object.x }}</td></tr>
