--- a/patbati/bati/templates/bati/bati_detail_pdf.html
+++ b/patbati/bati/templates/bati/bati_detail_pdf.html
@@ -36,7 +36,7 @@
 
 <h2>Géographie et zonage</h2>
 <table class="table">
-  <tr><th>Secteur</th><td>{{ object.secteur_name|default:"-" }}</td></tr>
+  <tr><th>Secteur</th><td>{{ object.secteurs|default:"-" }}</td></tr>
   <tr><th>Commune</th><td>{{ object.commune_name|default:"-" }}</td></tr>
   <tr><th>Règlementation / Protection</th>
     <td>
