--- a/patbati/bati/templates/bati/bati_public_pdf.html
+++ b/patbati/bati/templates/bati/bati_public_pdf.html
@@ -6,7 +6,7 @@
 
 <h1 class="title">{{ object.appelation }}</h1>
 <p class="subtitle">
-  <strong> Secteur : {{ object.secteur_name|default:"-" }}</strong> 
+  <strong> Secteur : {{ object.secteurs|default:"-" }}</strong> 
 </p>
 
 <section>
