allow multiple collapse

--- a/patbati/bati/templates/bati/bati_detail.html
+++ b/patbati/bati/templates/bati/bati_detail.html
@@ -258,8 +258,7 @@
                 </div>
                 <div id="collapseStruct{{ forloop.counter }}"
                     class="collapse {% if forloop.first %}show{% endif %}"
-                    aria-labelledby="headingStruct{{ forloop.counter }}"
-                    data-parent="#structuresAccordion">
+                    aria-labelledby="headingStruct{{ forloop.counter }}">
                     <div class="card-body border-0">
                         <table class="table table-sm table-bordered mb-2" data-qa="structure-description-table">
                             <thead class="table-info">
@@ -374,8 +373,7 @@
                 </div>
                 <div id="collapseSO{{ forloop.counter }}"
                     class="collapse {% if forloop.first %}show{% endif %}"
-                    aria-labelledby="headingSO{{ forloop.counter }}"
-                    data-parent="#secondOeuvreAccordion">
+                    aria-labelledby="headingSO{{ forloop.counter }}">
                     <div class="card-body border-0">
                         <table class="table table-sm table-bordered mb-2" data-qa="second-description-table">
                             <thead class="table-info">
