--- a/patbati/bati/templates/bati/bati_detail.html
+++ b/patbati/bati/templates/bati/bati_detail.html
@@ -10,6 +10,7 @@
 
 {% block attachmentspanel %}
 {% include "bati/bati_attachments.html" %}
+{{ block.super }}
 {% endblock %}
 
 {% block before_attachments_extra_tab_nav %}
