- split up templates

--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -1,243 +1,18 @@
 {% extends "mapentity/mapentity_detail_attributes.html" %} 
-{% load i18n mapentity_tags %}
+{% load i18n static mapentity_tags %}
 {% block attributes %}
 
-<!-- Table renseignements (expanded by default) -->
-<div class="content mb-3">
-  <div class="card">
-    <div class="card-header text-center d-flex justify-content-between align-items-center" 
-         data-toggle="collapse" data-target="#collapseRenseignements"
-         aria-expanded="true" aria-controls="collapseRenseignements" style="cursor:pointer; position: relative;">
-      <span>Renseignements</span>
-      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-    </div>
-    <div id="collapseRenseignements" class="collapse show">
-      <div class="card-body p-0">
-        <table class="table table-striped table-bordered mb-0">
-          <tbody>
-            <tr><th data-qa="nom">Nom</th><td>{{ object.appelation|default:object }}</td></tr>
-            <tr><th>Nouveau numéro</th><td>{{ object.id|default:"-" }}</td></tr>
-            <tr><th>Ancien numéro</th><td>{{ object.ancien_index|default:"-" }}</td></tr>
-            <tr><th data-qa="valeurPat">Valeur patrimoniale</th><td>{{ object.notepatri|default:"-" }}</td></tr>
-            <tr><th>Patrimonialité</th><td>{{ object.patrimonialite|default:"-" }}</td></tr>
-            <tr><th>Classe d'architecture</th><td>{{ object.classe|default:"-" }}</td></tr>
-            <tr><th>Propriétaire</th><td>{{ object.proprietaire|default:"-" }}</td></tr>
-            <tr><th data-qa="indiv">Bâtiment en indivision</th><td>{{ object.indivision|yesno:"Oui,Non" }}</td></tr>
-            <tr><th>Type de batiment</th><td>{{ object.type_bat|default:"-" }}</td></tr>
-            <tr>
-              <th>Règlementation</th>
-              <td>{{ object.protection_names|default:"-" }}</td>
-            </tr>
-            <tr><th>Capacité</th><td>{{ object.capacite|default:"-" }}</td></tr>
-            <tr><th data-qa="date">Date d'insertion</th><td>{{ object.date_insert|default:"-" }}</td></tr>
-            <tr><th>Date de mise à jour</th><td>{{ object.date_update|default:"-" }}</td></tr>
-            <tr><th>Bâtiment supprimé</th><td>{{ object.bat_suppr|yesno:"Oui,Non" }}</td></tr>
-            <tr><th>Etat général</th><td>{{ object.conservation|default:"-" }}</td></tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "bati/properties/bati_renseignements.html" %}
 
-<!-- Collapsible card for Géographie -->
-<div class="content mb-3">
-  <div class="card">
-    <div class="card-header text-center d-flex justify-content-between align-items-center"
-        data-toggle="collapse"
-        data-target="#collapseGeo"
-        aria-expanded="false"
-        aria-controls="collapseGeo"
-        style="cursor:pointer; position: relative;">
-      <span>Géographie</span>
-      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-    </div>
-    <div id="collapseGeo" class="collapse">
-      <div class="card-body p-0">
-        <table class="table table-striped table-bordered mb-0">
-          <tbody>
-            <tr><th>Secteur</th><td>{{ object.secteurs }}</td></tr>
-            <tr><th>Lieu-dit</th><td>{{ object.lieu_dit }}</td></tr>
-            <tr><th>Cadastre</th><td>{{ object.cadastre }}</td></tr>
-            <tr><th>Coordonnée X</th><td>{{ object.x }}</td></tr>
-            <tr><th>Coordonnée Y</th><td>{{ object.y }}</td></tr>
-            <tr><th>Altitude</th><td>{{ object.altitude|default:"-" }}</td></tr>
-            <tr><th>Dénivelé</th><td>{{ object.denivelle|default:"-" }}</td></tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "bati/properties/bati_geo.html" %}
 
-<!-- Collapsible card for Situation -->
-<div class="content mb-3">
-  <div class="card">
-    <div class="card-header text-center d-flex justify-content-between align-items-center"
-        data-toggle="collapse"
-        data-target="#collapseSituation"
-        aria-expanded="false"
-        aria-controls="collapseSituation"
-        style="cursor:pointer; position: relative;">
-      <span>Situation</span>
-      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-    </div>
-    <div id="collapseSituation" class="collapse">
-      <div class="card-body p-0">
-        <table class="table table-striped table-bordered mb-0">
-          <tbody>
-            <tr><th>Implantation</th><td>{{ object.implantation }}</td></tr>
-            <tr><th>Faitage</th><td>{{ object.faitage }}</td></tr>
-            <tr><th>Situation géographique</th><td>{{ object.situation_geo }}</td></tr>
-            <tr><th>Exposition</th><td>{{ object.exposition }}</td></tr>
-            <tr><th>Pente</th><td>{{ object.pente }}</td></tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "bati/properties/bati_situation.html" %}
 
-<!-- Collapsible card for Contexte naturel -->
-<div class="content mb-3">
-  <div class="card">
-    <div class="card-header text-center d-flex justify-content-between align-items-center"
-        data-toggle="collapse"
-        data-target="#collapseNaturel"
-        aria-expanded="false"
-        aria-controls="collapseNaturel"
-        style="cursor:pointer; position: relative;">
-      <span>Contexte naturel</span>
-      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-    </div>
-    <div id="collapseNaturel" class="collapse">
-      <div class="card-body p-0">
-        <table class="table table-striped table-bordered mb-0">
-          <tbody>
-            <tr>
-              <th>Risques naturels</th>
-              <td>
-                  {% for risque in object.risques_nat.all %}
-                  {{ risque.label }}{% if not forloop.last %}, {% endif %}
-                  {% empty %}
-                  Aucun risque naturel
-                  {% endfor %}
-              </td>
-            </tr>
-            <tr>
-              <th>Remarque risque naturel</th>
-              <td>{{ object.remarque_risque|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Masques</th>
-              <td>
-                {% for masque in object.masques.all %}
-                {{ masque.label }}{% if not forloop.last %}, {% endif %}
-                {% empty %}
-                Aucun masque
-                {% endfor %}
-              </td>
-            </tr>
-            <tr>
-              <th>Commentaire Masque</th>
-              <td>{{ object.commentaire_masque|default:"-" }}</td>
-            </tr>
-            <tr>
-              <th>Remarque générale</th>
-              <td>{{ object.remarque_generale|default:"-" }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "bati/properties/bati_context_naturel.html" %}
 
-<!-- Collapsible card for Equipements -->
-<div class="content mb-3">
-  <div class="card">
-    <div class="card-header text-center d-flex justify-content-between align-items-center"
-        data-toggle="collapse"
-        data-target="#collapseEquipements"
-        aria-expanded="false"
-        aria-controls="collapseEquipements"
-        style="cursor:pointer; position: relative;">
-      <span>Equipements</span>
-      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-    </div>
-    <div id="collapseEquipements" class="collapse">
-      <div class="card-body p-0">
-        <table class="table table-striped table-bordered mb-0">
-          <thead>
-            <tr>
-              <th>Type</th>
-              <th>Conservation</th>
-              <th>Commentaire</th>
-              <th>Est remarquable</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for equipement in object.equipements.all %}
-            <tr>
-              <td>{{ equipement.type|default:"-" }}</td>
-              <td>{{ equipement.conservation|default:"-" }}</td>
-              <td>{{ equipement.commentaire|default:"-" }}</td>
-              <td>{{ equipement.est_remarquable|yesno:"Oui,Non" }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-              <td colspan="4" class="text-center">Aucun équipement associé</td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "bati/properties/bati_equipements.html" %}
 
-<!-- Collapsible card for Elements Paysager -->
-<div class="content mb-3">
-  <div class="card">
-    <div class="card-header text-center d-flex justify-content-between align-items-center"
-        data-toggle="collapse"
-        data-target="#collapseElementsPaysager"
-        aria-expanded="false"
-        aria-controls="collapseElementsPaysager"
-        style="cursor:pointer; position: relative;">
-      <span>Elements Paysager</span>
-      <span class="chevron-icon"><i class="bi bi-chevron-down"></i></span>
-    </div>
-    <div id="collapseElementsPaysager" class="collapse">
-      <div class="card-body p-0">
-        <table class="table table-striped table-bordered mb-0">
-          <thead>
-            <tr>
-              <th>Type</th>
-              <th>Conservation</th>
-              <th>Commentaire</th>
-              <th>Est remarquable</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for element in object.elements_paysagers.all %}
-            <tr>
-              <td>{{ element.type|default:"-" }}</td>
-              <td>{{ element.conservation|default:"-" }}</td>
-              <td>{{ element.commentaire|default:"-" }}</td>
-              <td>{{ element.est_remarquable|yesno:"Oui,Non" }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-              <td colspan="4" class="text-center">Aucun élément paysager associé</td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
+{% include "bati/properties/bati_elements_pays.html" %}
 
 {{ block.super }} 
 {% endblock attributes %}
