--- a/patbati/bati/templates/bati/bati_detail.html
+++ b/patbati/bati/templates/bati/bati_detail.html
@@ -68,5 +68,9 @@
         min-width: 30%;
         width: 70%!important;
     }
+
+    #tab-related-objects {
+        display: None !important;
+    }
 </style>
 {% endblock extrabody %}
