--- a/patbati/bati/templates/bati/properties/bati_geo.html
+++ b/patbati/bati/templates/bati/properties/bati_geo.html
@@ -19,8 +19,8 @@
             <tr><th>Secteur</th><td>{{ object.secteurs }}</td></tr>
             <tr><th>Lieu-dit</th><td>{{ object.lieu_dit }}</td></tr>
             <tr><th>Cadastre</th><td>{{ object.cadastre }}</td></tr>
-            <tr><th>Coordonnée X</th><td>{{ object.x }}</td></tr>
-            <tr><th>Coordonnée Y</th><td>{{ object.y }}</td></tr>
+            <tr><th>Coordonnée X</th><td>{{ object.geom.x|floatformat:5 }}</td></tr>
+            <tr><th>Coordonnée Y</th><td>{{ object.geom.y|floatformat:5 }}</td></tr>
             <tr><th>Altitude</th><td>{{ object.altitude|default:"-" }}</td></tr>
             <tr><th>Dénivelé</th><td>{{ object.denivelle|default:"-" }}</td></tr>
           </tbody>
