--- a/patbati/bati/templates/bati/properties/bati_geo.html
+++ b/patbati/bati/templates/bati/properties/bati_geo.html
@@ -16,9 +16,9 @@
       <div class="card-body p-0">
         <table class="table table-striped table-bordered mb-0">
           <tbody>
-            <tr><th>Secteur</th><td>{{ object.secteurs }}</td></tr>
-            <tr><th>Lieu-dit</th><td>{{ object.lieu_dit }}</td></tr>
-            <tr><th>Cadastre</th><td>{{ object.cadastre }}</td></tr>
+            <tr><th>Secteur</th><td>{{ object.secteurs|default:"-" }}</td></tr>
+            <tr><th>Lieu-dit</th><td>{{ object.lieu_dit|default:"-" }}</td></tr>
+            <tr><th>Cadastre</th><td>{{ object.cadastre|default:"-" }}</td></tr>
             <tr><th>Coordonnée X</th><td>{{ object.geom.x|floatformat:5 }}</td></tr>
             <tr><th>Coordonnée Y</th><td>{{ object.geom.y|floatformat:5 }}</td></tr>
             <tr><th>Altitude</th><td>{{ object.altitude|default:"-" }}</td></tr>
