--- a/patbati/bati/templates/bati/properties/bati_renseignements.html
+++ b/patbati/bati/templates/bati/properties/bati_renseignements.html
@@ -14,8 +14,7 @@
         <table class="table table-striped table-bordered mb-0">
           <tbody>
             <tr><th data-qa="nom">Nom</th><td>{{ object.appelation|default:object }}</td></tr>
-            <tr><th>Nouveau numéro</th><td>{{ object.id|default:"-" }}</td></tr>
-            <tr><th>Ancien numéro</th><td>{{ object.ancien_index|default:"-" }}</td></tr>
+            <tr><th>Numéro d'identification</th><td>{{ object.id|default:"-" }}</td></tr>
             <tr><th data-qa="valeurPat">Valeur patrimoniale</th><td>{{ object.notepatri|default:"-" }}</td></tr>
             <tr><th>Patrimonialité</th><td>{{ object.patrimonialite|default:"-" }}</td></tr>
             <tr><th>Classe d'architecture</th><td>{{ object.classe|default:"-" }}</td></tr>
