--- a/patbati/bati/templates/bati/properties/bati_situation.html
+++ b/patbati/bati/templates/bati/properties/bati_situation.html
@@ -16,11 +16,11 @@
       <div class="card-body p-0">
         <table class="table table-striped table-bordered mb-0">
           <tbody>
-            <tr><th>Implantation</th><td>{{ object.implantation }}</td></tr>
-            <tr><th>Faitage</th><td>{{ object.faitage }}</td></tr>
-            <tr><th>Situation géographique</th><td>{{ object.situation_geo }}</td></tr>
-            <tr><th>Exposition</th><td>{{ object.exposition }}</td></tr>
-            <tr><th>Pente</th><td>{{ object.pente }}</td></tr>
+            <tr><th>Implantation</th><td>{{ object.implantation|default:"-" }}</td></tr>
+            <tr><th>Faitage</th><td>{{ object.faitage|default:"-" }}</td></tr>
+            <tr><th>Situation géographique</th><td>{{ object.situation_geo|default:"-" }}</td></tr>
+            <tr><th>Exposition</th><td>{{ object.exposition|default:"-" }}</td></tr>
+            <tr><th>Pente</th><td>{{ object.pente|default:"-" }}</td></tr>
           </tbody>
         </table>
       </div>
